--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/public/logo.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dream Wheel Motors </title>
+    <meta name="description" content="Dream Wheel Motors - Your trusted destination for high-quality vehicles and exceptional service." />
+    <title>Dream Wheel Motors</title>
   </head>
   <body>
     <div id="root"></div>
